# wazuh-dashboard-operator

./: .gitignore  CODEOWNERS  CONTRIBUTING.fork.md  Makefile.docs  README.md  actions.yaml  ca.pem  charm_version  charm_version.backup  charmcraft-24.04.patch  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  spread.yaml  tox.ini
.github/: .jira_sync_config.yaml  actionlint.yaml  renovate.json5
.github/workflows/: ci.yaml  docs.yaml  integration_test.yaml  release.yaml  sync_docs.yaml  sync_issue_to_jira.yaml  terraform-docs.yaml  test.yaml  test_prometheus_rules.yaml  tics_run_sh_ghaction_test.yml
docs/: index.md
docs/how-to/: upgrade.md
lib/charms/wazuh_server/v0/: wazuh_api.py
src/: charm.py  exceptions.py  helpers.py  literals.py  workload.py
src/alert_rules/prometheus/: prometheus_alerts.yaml
src/core/: cluster.py  models.py  workload.py
src/events/: oauth.py  password_actions.py  requirer.py  tls.py  upgrade.py  wazuh_api.py
src/grafana_dashboards/: dashboard.json
src/managers/: api.py  config.py  health.py  tls.py  upgrade.py  wazuh.py
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/charm/: README.md  main.tf  outputs.tf  variables.tf
terraform/product/: README.md  main.tf  outputs.tf  variables.tf
terraform/tests/: preamble.tf  simple_deployment.tf  variables.tf
tests/integration/: conftest.py  helpers.py  test_charm.py  test_oauth.py  test_password_rotation.py  test_upgrade.py
tests/integration/application-charm/: actions.yaml  charmcraft.yaml  metadata.yaml  requirements.txt
tests/integration/application-charm/src/: charm.py
tests/integration/ha/: helpers.py  opensearch.py  test_network_cut.py  test_process_interrupt.py  test_scaling.py
tests/integration/opensearch-operator/.github/workflows/: ci.yaml
tests/integration/opensearch-operator/lib/charms/grafana_agent/v0/: cos_agent.py
tests/integration/opensearch-operator/lib/charms/opensearch/v0/: opensearch_base_charm.py  opensearch_relation_provider.py
tests/integration/opensearch-operator/src/: charm.py  opensearch.py
tests/integration/spaces/: conftest.py  test_wrong_etc_hosts.py
tests/spread/test_network_cut.py/: task.yaml
tests/spread/test_oauth.py/: task.yaml
tests/spread/test_process_interrupt.py/: task.yaml
tests/spread/test_scaling.py/: task.yaml
tests/spread/test_wrong_etc_hosts.py/: task.yaml
tests/unit/: conftest.py  test_api.py  test_charm.py  test_config.py  test_health.py  test_tls.py  test_upgrade.py  test_wazuh.py
tests/unit/test_alert_rules/: test_opensearch_dashboards_rules.yaml
