# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
# Charm is not packed as a standard Python package; this information is not used
name = "charm"
version = "1.0"
description = "opensearch-dashboards-operator"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
tenacity = "^8.4.2"
pure-sasl = "^0.6.2"
cosl = "^0.0.12"
pydantic = "^1.10.17"
pyyaml = "^6.0.1"
poetry-plugin-export = "^1.8.0"
ops = "^2.13.0"
poetry-core = "^1.9.0"

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = "^2.13.0"
# data_platform_libs/v0/upgrade.py
# grafana_agent/v0/cos_agent.py requires pydantic <2
pydantic = "^1.10, <2"
# tls_certificates_interface/v1/tls_certificates.py
cryptography = "^42.0.5"
jsonschema = "^4.21.1"
# grafana_agent/v0/cos_agent.py
bcrypt = "^4.1.3"


[tool.poetry.group.format]
optional = true


[tool.poetry.group.format.dependencies]
black = "^24.4.2"
isort = "^5.13.2"


[tool.poetry.group.lint]
optional = true


[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-copyright = "^0.2.4"
flake8-builtins = "^2.5.0"
pyproject-flake8 = "^7.0.0"
pep8-naming = "^0.13.3"
codespell = "^2.2.6"
pyright = "^1.1.318"
typing-extensions = "^4.9.0"

[tool.poetry.group.unit.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.21.2"
coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-mock = "^3.11.1"

[tool.poetry.group.integration.dependencies]
ops = "^2.13.0"
pytest = "^8.2.2"
juju = "^3.2.0"
tenacity = "^8.3.0"
pytest-github-secrets = {git = "https://github.com/canonical/data-platform-workflows", tag = "v16.2.1", subdirectory = "python/pytest_plugins/github_secrets"}
pytest-asyncio = "^0.21.2"
pytest-operator = "^0.35.0"
pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v16.2.1", subdirectory = "python/pytest_plugins/pytest_operator_cache"}

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
markers = ["unstable"]
asyncio_mode = "auto"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]
extraPaths = ["./lib"]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = false
reportImportCycles = false
reportMissingModuleSource = true
reportMissingImports = false
stubPath = ""
